fixed positioning problem of out of screen images + fixed style bugs with new <img> based nav arrows

--- a/assets/styles/sass/_layouts.scss
+++ b/assets/styles/sass/_layouts.scss
@@ -201,18 +201,18 @@
 
 	.option.left{
 		top: 0;
-		left: -1500px;
+		left: -3000px;
 	}
 	.option.right{
 		top: 0;
-		left: 2500px;
+		left: 3000px;
 	}
 	.option.up{
-		top: -1500px;
+		top: -3000px;
 		left: 0;
 	}
 	.option.down{
-		top: 1500px;
+		top: 3000px;
 		left: 0;
 	}
 
